syntax = "proto3";
option java_package = "com.autohome.models";
option java_outer_classname = "RichMediaModel";

message RichMedia {
    string id = 1;
    string oid = 2;
    string bizId = 3;
    string bizType = 4;
    string tblId = 5;
    string objectId = 6;
    string objectClassId = 7;
    string objectLineId = 8;
    string abstractStr = 9;
    string activeEndTime = 10;
    string activeStartTime = 11;
    string author = 12;
    string authorIcon = 13;
    string authorId = 14;
    string authorRole = 15;
    string authorType = 16;
    string billboardTime = 17;
    string billendTime = 18;
    string bizShowId = 19;
    string broadcastState = 20;
    string carBrandIds = 21;
    string categoryBizType = 22;
    string chezhanId = 23;
    string circleMember = 24;
    string circleMemberUpper = 25;
    string city = 26;
    string cityId = 27;
    string cityIds = 28;
    string clubClassId = 29;
    string clubLastReplyDate = 30;
    string clubMemberId = 31;
    string cmsCarPrice = 32;
    string cmsContentClass = 33;
    string cmsContentClass2 = 34;
    string cmsLevelIds = 35;
    string objectUid = 36;
    string contry = 37;
    string createAt = 38;
    string ctrlChannel = 39;
    string duration = 40;
    string endTime = 41;
    string geoPoint = 42;
    string graphicImgList2 = 43;
    string graphicImgList3 = 44;
    string ident = 45;
    string imgUrl = 46;
    string imgUrl2 = 47;
    string imgUrl3 = 48;
    string imgUrl4 = 49;
    string indexDetail = 50;
    string isCloseComment = 51;
    string isDelete = 52;
    string isPhone = 53;
    string isSync = 54;
    string isVideo = 55;
    string isYingxiao = 56;
    string joinCheck = 57;
    string jumpUrl = 58;
    string jumpUrl2 = 59;
    string liveAlbumname = 60;
    string liveLine = 61;
    string liveState = 62;
    string longTitle = 63;
    string maxPrice = 64;
    string mediaType = 65;
    string minPrice = 66;
    string modetype = 67;
    string modetypeform = 68;
    string modetypeforpc = 69;
    string modifyTime = 70;
    string nlpTagsChoose2 = 71;
    string pageIndex = 72;
    string pkId = 73;
    string platform = 74;
    string playCount = 75;
    string popularity = 76;
    string publishTime = 77;
    string pushIsDelete = 78;
    string pushSlogan = 79;
    string pushSlogan2 = 80;
    string pushTitle = 81;
    string pushTitle2 = 82;
    string recommendTime = 83;
    string refine = 84;
    string refineTime = 85;
    string replyCount = 86;
    string rn = 87;
    string serializeOrders = 88;
    string shareCount = 89;
    string shareUrl = 90;
    string showBigImg = 91;
    string showType = 92;
    string skisFirst = 93;
    string source = 94;
    string specKbScore = 95;
    string startTime = 96;
    string state = 97;
    string subjectId = 98;
    string subjectJumpUrl = 99;
    string subjectJumpUrl2 = 100;
    string subjectName = 101;
    string summary = 102;
    string targetId = 103;
    string targetType = 104;
    string title = 105;
    string titleTest = 106;
    string tuijianforapp = 107;
    string updateAt = 108;
    string updateTime = 109;
    string vId = 110;
    string videoHeight = 111;
    string videoImgUrl = 112;
    string videoTime = 113;
    string videoWidth = 114;
    string viewCount = 115;
    string voteId = 116;
    string youkuId = 117;
    string nlpFlag = 118;
    string createdStime = 119;
    string modifiedStime = 120;
    string provinceId = 121;
    string areaId = 122;
    string class1Id = 123;
    string class2Id = 124;
    string kind = 125;
    string classUrl = 126;
    string displayStatus = 127;
    string isGraphicArticle = 128;
    string appImg = 129;
    string searchStatus = 130;
    string searchUsed = 131;
    string recommendUsed = 132;
    string localStatus = 133;
    string localUsed = 134;
    string bbsId = 135;
    string bbsName = 136;
    string poll = 137;
    string rank = 138;
    string duplicationSign = 139;
    string field2 = 140;
    string guid = 141;
    string isVr = 142;
    string articleType = 143;
    string isYouxuan = 144;
    string yearId = 145;
    string yearName = 146;
    string publishStatus = 147;
    string liveType = 148;
    string ensure = 149;
    string answerResult = 150;
    string answerer = 151;
    string answererId = 152;
    string answerDate = 153;
    string answerIsEnsure = 154;
    string localCreateAt = 155;
    string localUpdateAt = 156;
    string searchCreateAt = 157;
    string searchUpdateAt = 158;
    string carBrandNames = 159;
    string categoryTags = 160;
    string chatId = 161;
    string cities = 162;
    string cmsLevelNames = 163;
    string cmsSeriesIds = 164;
    string cmsSeriesNames = 165;
    string cmsSpecIds = 166;
    string cmsSpecNames = 167;
    string cmsTags = 168;
    string firmIds = 169;
    string firmNames = 170;
    string formated = 171;
    string graphicImgList = 172;
    string infoObj = 173;
    string nlpEvaluation = 174;
    string nlpEvaluationCategory = 175;
    string nlpKeyword = 176;
    string nlpKeywordsChoose = 177;
    string nlpSeries = 178;
    string nlpSeriesChoose = 179;
    string nlpTags = 180;
    string nlpTagsChoose = 181;
    string original = 182;
    string picitems = 183;
    string pkObj = 184;
    string specFeature = 185;
    string voteObj = 186;
    string detailUrl = 187;
    string finalCitys = 188;
    string mPicurls = 189;
    string category = 190;
    string categoryId = 191;
    string reputationIds = 192;
    string description = 193;

    string content = 194;
    string tableName = 195;
    string keywords = 196;
    string brandsId = 197;
    string seriesId = 198;
    string articleIdTags = 199;
    string articleLabelTags = 200;
    string brandsName = 201;
    string seriesName = 202;
    string nlpPicTags = 203;
    string jsonReserve = 204;

    string displayExtendData = 205;
    string showimagelist = 206;
    string firstCoverImg = 207;
    string searchKeywords = 208;
    string picUrls = 209;
    string picUrls2 = 210;
    string extJson = 211;
    string extTags = 212;
    string msguid = 213;
    string msgtimetrace = 214;
}
